--- a/contact/css/project-0f5c928517_1.css
+++ b/contact/css/project-0f5c928517_1.css
@@ -6666,7 +6666,7 @@ p.content__text-blue {
 }
 
 .new_right_contact_social_icon {
-    background: linear-gradient(to top right, #f15a29 -5%, #ffb427 100%);
+    background: linear-gradient(to top right, #ccc -5%, #954a9c 100%);
 
 }
 
